# DesignPattern

ComlicatedUndoRedo/: BaseCommand.h  BaseCommandManager.h  BaseCommandReceiver.h  CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  Factory.h  MacroCommand.cpp  MacroCommand.h  Singleton.h  Subject.h  Util.h
Observer/: CMakeLists.txt  Observer.cpp  Observer.h  main.cpp
UndoRedo/: CMakeLists.txt
UndoRedo/SimpleUndoRedo/: Command.h  Commander.cpp  Commander.h
_UndoRedo/: CMakeLists.txt  Command.h  InputCommand.cpp  InputCommand.h  main.cpp
composite/: CMakeLists.txt  Directory.cpp  Directory.h  Entry.h  File.cpp  File.h  main.cpp
